Added palette, some utility classes, and a CSS reset

--- a/main.css
+++ b/main.css
@@ -1,3 +1,68 @@
+/*
+  Josh's Custom CSS Reset
+  https://www.joshwcomeau.com/css/custom-css-reset/
+*/
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+* {
+  margin: 0;
+}
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+:root {
+  --carnation-pink: hsla(332, 100%, 80%, 1);
+  --lemon-chiffon: hsla(54, 91%, 86%, 1);
+  --nyanza: hsla(143, 62%, 89%, 1);
+  --uranian-blue: hsla(200, 87%, 82%, 1);
+  --mauve: hsla(278, 82%, 87%, 1);
+}
+
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.accent {
+  color: var(--carnation-pink);
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.bold {
+  font-weight: 700;
+}
+
 .link-container {
   display: flex;
   gap: 20px;
