--- a/main.css
+++ b/main.css
@@ -115,10 +115,19 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 li {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+i {
+  text-align: center;
 }
 
 .xl-text {
