--- a/main.css
+++ b/main.css
@@ -86,6 +86,12 @@ header {
   justify-content: space-between;
 }
 
+nav {
+  display: flex;
+  justify-content: end;
+  gap: var(--small-spacing);
+}
+
 main {
   margin-top: var(--med-spacing);
 }
@@ -111,7 +117,7 @@ p {
   max-width: 60ch;
 }
 
-a {
+.link-container a {
   font-weight: 700;
   text-decoration-color: var(--mauve);
 }
@@ -158,6 +164,10 @@ i {
 
 .bold {
   font-weight: 700;
+}
+
+.header-item {
+  flex: 1;
 }
 
 .contact i {
