--- a/main.css
+++ b/main.css
@@ -93,12 +93,21 @@ body {
 
 .project-body {
   display: flex;
+  flex-direction: column;
   gap: var(--med-spacing);
 }
 
 .project-image {
-  width: 60%;
-  aspect-ratio: 16/9;
+  width: 100%;
+  aspect-ratio: 1/1;
+}
+
+.projects p {
+  max-width: 80ch;
+}
+
+.project-info p {
+  max-width: 60ch;
 }
 
 .pink {
@@ -113,14 +122,16 @@ header {
   position: sticky;
   top: 0;
   background-color: var(--portfolio-white);
-  padding: var(--small-spacing) 0;
+  padding: var(--med-spacing) 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
+  gap: var(--small-spacing);
 }
 
 nav {
   display: flex;
-  justify-content: end;
+  justify-content: start;
   gap: var(--small-spacing);
 }
 
@@ -150,7 +161,6 @@ a {
 
 p {
   margin-bottom: var(--small-spacing);
-  max-width: 60ch;
 }
 
 .link-container a {
@@ -202,10 +212,6 @@ i {
   font-weight: 700;
 }
 
-.header-item {
-  flex: 1;
-}
-
 .contact i {
   font-size: var(--large-text);
 }
@@ -244,4 +250,49 @@ article {
 
 .subtitle {
   display: block;
+}
+
+.peep {
+  display: none;
+}
+
+@media screen and (min-width: 820px) {
+  .project-body {
+    flex-direction: row;
+  }
+
+  .project-image {
+    width: 60%;
+    aspect-ratio: 16/9;
+  }
+
+  .about-copy {
+    column-width: 30ch;
+    column-gap: var(--med-spacing);
+    column-rule: 1px solid var(--nyanza);
+    text-justify: distribute;
+  }
+
+  .intro {
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .peep {
+    display: block;
+    transform: rotateY(180deg);
+    height: 80%;
+  }
+}
+
+@media screen and (min-width: 920px) {
+  header {
+    gap: var(--med-spacing);
+  }
+
+  nav {
+    justify-content: end;
+  }
 }
