--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ body {
 }
 
 .intro {
-  height: 80vh;
+  /* height: 80vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -291,6 +291,7 @@ article {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    height: 80vh;
   }
 
   .head-peep {
