--- a/main.css
+++ b/main.css
@@ -94,8 +94,12 @@ body {
 
 .experience {
   display: flex;
-  align-items: center;
   flex-direction: column;
+  gap: var(--small-spacing);
+}
+
+.experience h3 {
+  text-align: center;
 }
 
 .projects {
@@ -184,6 +188,7 @@ p {
 }
 
 ul {
+  justify-content: center;
   padding-inline-start: 0;
   list-style-type: none;
   display: flex;
@@ -195,8 +200,13 @@ li {
   display: flex;
   flex-direction: column;
   align-content: center;
+  justify-content: center;
   gap: var(--xs-spacing);
-  margin-bottom: var(--xs-spacing);
+  width: 45%;
+  padding: var(--small-spacing);
+  text-align: center;
+  border: 1px solid hsla(0, 100%, 0%, 0.2);
+  border-radius: 5px;
 }
 
 i {
@@ -279,6 +289,10 @@ article {
 @media screen and (min-width: 820px) {
   header {
     padding: var(--med-spacing) 0;
+  }
+
+  li {
+    width: 20%;
   }
 
   .project-body {
