--- a/main.css
+++ b/main.css
@@ -95,10 +95,17 @@ body {
 .experience {
   display: flex;
   flex-direction: column;
-  gap: var(--small-spacing);
 }
 
 .experience h3 {
+  font-weight: 400;
+}
+
+.skills {
+  margin-top: var(--med-spacing);
+}
+
+.centered {
   text-align: center;
 }
 
@@ -106,6 +113,7 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
+  gap: var(--small-spacing);
 }
 
 .project-body {
@@ -117,10 +125,7 @@ body {
 .project-image {
   width: 100%;
   aspect-ratio: 1/1;
-}
-
-.projects p {
-  max-width: 80ch;
+  border: 2px solid hsla(278, 82%, 87%, 0.2);
 }
 
 .project-info p {
@@ -168,7 +173,7 @@ h2 {
 }
 
 h3 {
-  margin: var(--med-spacing) 0 var(--small-spacing) 0;
+  margin: var(--small-spacing) 0;
 }
 
 p,
@@ -264,10 +269,6 @@ article {
   margin-bottom: var(--med-spacing);
 }
 
-.project-name {
-  color: var(--uranian-blue);
-}
-
 .link-container {
   display: flex;
   gap: var(--small-spacing);
@@ -299,6 +300,10 @@ article {
     flex-direction: row;
   }
 
+  .project-info {
+    order: 1;
+  }
+
   .project-image {
     width: 60%;
     aspect-ratio: 16/9;
@@ -308,7 +313,6 @@ article {
     column-width: 30ch;
     column-gap: var(--med-spacing);
     column-rule: 1px solid var(--nyanza);
-    text-justify: distribute;
   }
 
   .intro {
