--- a/main.css
+++ b/main.css
@@ -58,7 +58,9 @@ https://www.rawkblog.com/2018/05/modular-scale-typography-with-css-variables-and
   --large-text: calc(var(--med-text) * var(--ratio));
   --xl-text: calc(var(--large-text) * var(--ratio));
   --small-spacing: 1rem;
+  --xxs-spacing: calc(var(--small-spacing) * 0.5);
   --xs-spacing: calc(var(--small-spacing) * 0.75);
+  --sm-spacing: calc(var(--small-spacing) * 1.75);
   --med-spacing: calc(var(--small-spacing) * 2.5);
   --large-spacing: calc(var(--med-spacing) * 2.5);
   --xl-spacing: calc(var(--large-spacing) * 2.5);
@@ -95,10 +97,7 @@ body {
 .experience {
   display: flex;
   flex-direction: column;
-}
-
-.skills {
-  margin-top: var(--med-spacing);
+  gap: var(--med-spacing);
 }
 
 .centered {
@@ -110,6 +109,10 @@ body {
   align-items: center;
   flex-direction: column;
   gap: var(--small-spacing);
+}
+
+.projects > .centered {
+  margin-bottom: var(--med-spacing);
 }
 
 .project-body {
@@ -136,6 +139,10 @@ body {
   color: var(--uranian-blue);
 }
 
+.mauve {
+  color: var(--mauve);
+}
+
 header {
   position: sticky;
   top: 0;
@@ -148,21 +155,25 @@ header {
   z-index: 1;
 }
 
-nav {
-  display: flex;
-  gap: var(--small-spacing);
-}
-
 footer {
   position: sticky;
   bottom: 0;
   background-color: var(--portfolio-white);
-  padding: var(--med-spacing) 0 var(--med-spacing) 0;
+  padding: var(--med-spacing) 0 var(--small-spacing) 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: var(--small-spacing);
+  gap: var(--xs-spacing);
   z-index: 1;
+}
+
+.header-contact {
+  display: none;
+}
+
+.footer-contact {
+  display: flex;
+  gap: var(--xxs-spacing);
 }
 
 main {
@@ -191,6 +202,10 @@ a {
 
 p {
   margin-bottom: var(--small-spacing);
+}
+
+p.centered {
+  margin-bottom: 0;
 }
 
 .link-container a,
@@ -288,6 +303,10 @@ section {
   margin-bottom: var(--large-spacing);
 }
 
+section.projects {
+  margin-bottom: 0;
+}
+
 article {
   margin-bottom: var(--med-spacing);
 }
@@ -317,6 +336,16 @@ article {
 
   footer {
     gap: var(--large-spacing);
+    padding: var(--med-spacing) 0 var(--sm-spacing) 0;
+  }
+
+  .header-contact {
+    display: flex;
+    gap: var(--small-spacing);
+  }
+
+  .footer-contact {
+    gap: var(--small-spacing);
   }
 
   li {
