--- a/main.css
+++ b/main.css
@@ -94,6 +94,11 @@ body {
   flex-direction: column;
 }
 
+.about-copy p > span {
+  font-weight: 700;
+  background-color: hsla(143, 62%, 89%, 0.7);
+}
+
 .experience {
   display: flex;
   flex-direction: column;
@@ -206,6 +211,15 @@ h3 {
   margin: var(--small-spacing) 0;
 }
 
+h4 {
+  margin-bottom: var(--xxs-spacing);
+  font-size: var(--small-text);
+}
+
+h4 + p {
+  margin-bottom: var(--med-spacing);
+}
+
 p,
 a {
   font-size: var(--font-size);
@@ -220,8 +234,7 @@ p.centered {
   margin-bottom: 0;
 }
 
-.link-container a,
-.resources a {
+.link-container a {
   font-weight: 700;
   text-decoration-color: var(--mauve);
 }
@@ -379,7 +392,7 @@ article {
   .about-copy {
     column-width: 30ch;
     column-gap: var(--med-spacing);
-    column-rule: 1px solid var(--nyanza);
+    column-rule: 1px solid var(--portfolio-black);
   }
 
   .intro {
